--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ Repository = "https://github.com/benedettilucas/SelectiveSSM"
 include = ["s6_core*"]
 
 [build-system]
-requires = ["setuptools>=64", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["setuptools", "wheel", "torch==2.7"]
+build-backend = "setuptools.build_meta:__legacy__"
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
